@@ -1,4 +1,6 @@
-$Id: CHANGES,v 1.16 2001/12/31 11:40:56 psavola Exp $
+$Id: CHANGES,v 1.17 2002/01/02 11:01:11 psavola Exp $
+
+01/02/2002	Ensure NULL-termination with strncpy.
 
 12/31/2001	Radvdump fixes: eliminate a warning of Prefix Information
 		sections with '-d -f'; add a note that
